--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -12,51 +12,58 @@
         <variable name="signUpViewModel" type="SignUpViewModel"/>
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:orientation="vertical"
-        android:gravity="center"
         tools:context=".screens.fragments.SignUpFragment">
 
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="User Name"
-            android:text="@{user.name}"
-            android:layout_marginBottom="5dp"
-            android:ems="10"
-            android:id="@+id/userNameEditText"/>
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="Email"
-            android:text="@{user.email}"
-            android:layout_marginBottom="5dp"
-            android:ems="10"
-            android:id="@+id/emailEditText"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="User Name"
+                android:text="@={user.name}"
+                android:layout_marginBottom="5dp"
+                android:ems="10"
+                android:id="@+id/userNameEditText"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:text="@{user.password}"
-            android:layout_marginBottom="5dp"
-            android:ems="10"
-            android:id="@+id/passwordEditText"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="Email"
+                android:text="@={user.email}"
+                android:layout_marginBottom="5dp"
+                android:ems="10"
+                android:id="@+id/emailEditText"/>
 
-        <Button
-            android:text="Sign Up"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/signUpButton"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:text="@={user.password}"
+                android:layout_marginBottom="5dp"
+                android:ems="10"
+                android:id="@+id/passwordEditText"/>
 
-    </LinearLayout>
+            <Button
+                android:text="Sign Up"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:onClick="@{() -> signUpViewModel.signUp(user)}"
+                android:id="@+id/signUpButton"/>
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </layout>
