--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -17,6 +17,9 @@
             app:destination="@id/loginFragment"
             app:popUpTo="@id/chatListFragment"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/chatList_to_userInfo"
+            app:destination="@id/userInfoFragment"/>
     </fragment>
 
     <fragment
@@ -45,5 +48,11 @@
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true"/>
     </fragment>
+
+    <fragment
+        android:id="@+id/userInfoFragment"
+        android:name="com.remotearth.fake_coder.chatapp.screens.fragments.UserInfoFragment"
+        android:label="UserInfoFragment"
+        tools:layout="@layout/user_info_fragment"/>
 
 </navigation>
