--- a/app/src/main/res/layout/user_info_fragment.xml
+++ b/app/src/main/res/layout/user_info_fragment.xml
@@ -29,7 +29,8 @@
                 android:layout_height="200dp"
                 android:layout_gravity="center"
                 app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
+                app:civ_border_color="#FF000000"
+                app:profileImage="@{user.profileImageUrl}"/>
 
             <TextView
                 android:layout_width="match_parent"
