--- a/app/src/main/res/layout/user_info_fragment.xml
+++ b/app/src/main/res/layout/user_info_fragment.xml
@@ -28,6 +28,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:onClick="@{() -> userInfoViewModel.selectProfilePictureFromGallery()}"
                 app:civ_border_width="2dp"
                 app:civ_border_color="#FF000000"
                 app:profileImage="@{user.profileImageUrl}"/>
