--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -13,6 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:clickable="true"
         android:focusable="true"
         android:orientation="vertical">
@@ -25,18 +28,19 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
                 app:profileImage="@{user.profileImageUrl}"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/large_label_margin"
-                android:paddingBottom="14dp"
+                android:layout_gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:paddingTop="14dp"
                 android:text="@{user.name}"
                 tools:text="@string/app_name"
+                android:textStyle="bold"
                 android:textColor="@color/colorSecondaryText"/>
 
         </LinearLayout>
