--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
 
 <resources>
     <dimen name="large_label_margin">8dp</dimen>
+
+    <dimen name="chat_bubble_left_margin">16dp</dimen>
+    <dimen name="chat_bubble_right_margin">16dp</dimen>
+    <dimen name="chat_message_padding">12dp</dimen>
+    <dimen name="chat_bubble_top_margin">16dp</dimen>
+
+    <dimen name="message_bubble_min_height">25dp</dimen>
 </resources>
