--- a/app/src/main/res/layout/message_sender_layout.xml
+++ b/app/src/main/res/layout/message_sender_layout.xml
@@ -1,65 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="@dimen/message_bubble_min_height"
-    android:layout_marginStart="@dimen/chat_bubble_left_margin"
-    android:layout_marginEnd="@dimen/chat_bubble_right_margin"
-    android:layout_marginTop="@dimen/chat_bubble_top_margin">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        tools:src="@drawable/ic_select_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.523"
-        android:id="@+id/circleImageView"/>
+    <data>
+        <import type="android.view.View"/>
+        <import type="com.remotearth.fake_coder.chatapp.Message"/>
 
-    <LinearLayout
-        android:id="@+id/messageHolder"
-        android:layout_width="wrap_content"
+        <variable name="message" type="Message"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:orientation="vertical"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/circleImageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.0">
+        android:minHeight="@dimen/message_bubble_min_height"
+        android:layout_marginStart="@dimen/chat_bubble_left_margin"
+        android:layout_marginEnd="@dimen/chat_bubble_right_margin"
+        android:layout_marginTop="@dimen/chat_bubble_top_margin">
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textColor="@color/grey"
-            android:textStyle="bold"
-            android:textSize="8sp"
-            tools:text="Seen"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            tools:src="@drawable/ic_select_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.523"
+            android:id="@+id/circleImageView"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/chat_message_padding"
-            tools:text="Hi from Sender"
-            android:background="@drawable/message_sender_chat_background"/>
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/messageHolder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/grey"
-            tools:text="JUNE 19 AT 03:30 PM"
-            android:textSize="8sp"/>
+            android:gravity="right"
+            android:orientation="vertical"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/circleImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0">
 
-    </LinearLayout>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@{message.isSeen() == true ? `Seen` : `Unseen`}"
+                android:textColor="@color/grey"
+                android:textStyle="bold"
+                android:textSize="8sp"
+                tools:text="Seen"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/chat_message_padding"
+                android:text="@{message.text}"
+                tools:text="Hi from Sender"
+                android:background="@drawable/message_sender_chat_background"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey"
+                tools:text="JUNE 19 AT 03:30 PM"
+                android:textSize="8sp"
+                app:timeStamp="@{message.timestamp}"/>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
