--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -8,6 +8,7 @@
     <data>
         <import type="com.remotearth.fake_coder.chatapp.Message"/>
         <import type="com.remotearth.fake_coder.chatapp.viewModels.ChatViewModel"/>
+        <import type="android.view.View"/>
 
         <variable name="message" type="Message"/>
         <variable name="chatViewModel" type="ChatViewModel"/>
@@ -17,6 +18,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".screens.fragments.ChatFragment">
+
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:indeterminate="true"
+            android:visibility="@{chatViewModel.isLoading ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/messageRecyclerView"
