Some change in design

--- a/app/src/main/res/drawable/messaage_receiver_chat_background.xml
+++ b/app/src/main/res/drawable/messaage_receiver_chat_background.xml
@@ -10,7 +10,7 @@
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="15dp"/>
 
-    <solid android:color="#059F69"/>
+    <solid android:color="#E2FBF2"/>
 
     <padding
         android:bottom="5dp"
