--- a/app/src/main/res/layout/message_receiver_layout.xml
+++ b/app/src/main/res/layout/message_receiver_layout.xml
@@ -47,6 +47,7 @@
             app:layout_constraintHorizontal_bias="0.0">
 
             <TextView
+                android:id="@+id/seenStatusTextView"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textColor="@color/grey"
@@ -65,6 +66,7 @@
                 android:background="@drawable/messaage_receiver_chat_background"/>
 
             <TextView
+                android:id="@+id/timeStampTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
