--- a/app/src/main/res/layout/message_sender_layout.xml
+++ b/app/src/main/res/layout/message_sender_layout.xml
@@ -23,7 +23,7 @@
 
         <LinearLayout
             android:id="@+id/messageHolder"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:orientation="vertical"
@@ -35,15 +35,15 @@
             app:layout_constraintVertical_bias="0.523">
 
             <TextView
-                android:id="@+id/seenStatusTextView"
+                android:id="@+id/timeStampTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@{message.isSeen() == true ? `Seen` : `Unseen`}"
+                android:gravity="center"
                 android:textColor="@color/grey"
-                android:textStyle="bold"
+                tools:text="JUNE 19 AT 03:30 PM"
                 android:textSize="8sp"
                 android:visibility="gone"
-                tools:text="Seen"/>
+                app:timeStamp="@{message.timestamp}"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,14 +55,16 @@
                 android:background="@drawable/message_sender_chat_background"/>
 
             <TextView
-                android:id="@+id/timeStampTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/seenStatusTextView"
                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@{message.isSeen() == true ? `Seen` : `Delivered`}"
                 android:textColor="@color/grey"
-                tools:text="JUNE 19 AT 03:30 PM"
+                android:textStyle="bold"
                 android:textSize="8sp"
                 android:visibility="gone"
-                app:timeStamp="@{message.timestamp}"/>
+                tools:text="Delivered"/>
+
 
         </LinearLayout>
 
