--- a/app/src/main/res/layout/message_sender_layout.xml
+++ b/app/src/main/res/layout/message_sender_layout.xml
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="@{message.isSeen() == true ? `Seen` : `Delivered`}"
-                android:textColor="@color/grey"
+                android:textColor="@{message.isSeen() == true ? @color/green : @color/grey}"
                 android:textStyle="bold"
                 android:textSize="8sp"
                 android:visibility="gone"
