--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -37,12 +37,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.0"
-            tools:listitem="@layout/message_sender_layout"/>
+            app:layout_constraintBottom_toTopOf="@+id/senderLayout"
+            tools:listitem="@layout/message_sender_layout"
+            app:layout_constraintVertical_bias="0.0"/>
 
         <LinearLayout
+            android:id="@+id/senderLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/message_edit_text_background"
@@ -66,7 +67,7 @@
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#E2FBF2"
                 android:padding="12dp"
