--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="colorSecondaryText">#757575</color>
     <color name="grey">#cfcfcf</color>
+    <color name="green">#6EB66F</color>
 </resources>
