--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -32,15 +32,14 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/messageRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="3dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/senderLayout"
-            tools:listitem="@layout/message_sender_layout"
-            app:layout_constraintVertical_bias="0.0"/>
+            tools:listitem="@layout/message_sender_layout"/>
 
         <LinearLayout
             android:id="@+id/senderLayout"
