--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -12,6 +12,7 @@
 
         <variable name="message" type="Message"/>
         <variable name="chatViewModel" type="ChatViewModel"/>
+        <variable name="imageUrl" type="String"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,9 +58,10 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:src="@drawable/ic_select_image"
+                tools:src="@drawable/ic_select_image"
                 android:id="@+id/circleImageView"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                app:profileImage="@{imageUrl}"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
