--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#10C480</color>
+    <color name="colorPrimaryDark">#059F69</color>
+    <color name="colorAccent">#FF2C13</color>
+    <color name="colorLessAccent">#F46B5B</color>
 
     <color name="colorSecondaryText">#757575</color>
 
