--- a/app/src/main/res/layout/header_user_profile.xml
+++ b/app/src/main/res/layout/header_user_profile.xml
@@ -28,6 +28,7 @@
             android:layout_marginBottom="8dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_left_arrow"
+            android:onClick="@{() -> chatViewModel.navigateBack()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
