--- a/app/src/main/res/layout/chat_list_fragment.xml
+++ b/app/src/main/res/layout/chat_list_fragment.xml
@@ -2,13 +2,15 @@
 
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="com.remotearth.fake_coder.chatapp.viewModels.ChatListViewModel"/>
         <import type="android.view.View"/>
 
         <variable name="chatListViewModel" type="ChatListViewModel"/>
+        <variable name="userId" type="String"/>
     </data>
 
     <LinearLayout
@@ -17,11 +19,34 @@
         android:orientation="vertical"
         tools:context=".screens.fragments.ChatListFragment">
 
-        <Button
-            android:text="Button"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> chatListViewModel.showProfile()}"/>
+            android:orientation="horizontal"
+            android:background="@color/colorPrimary">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/userImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:onClick="@{() -> chatListViewModel.showProfile()}"
+                tools:src="@drawable/ic_select_image"
+                app:receiverImage="@{userId}"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chats"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
