--- a/app/src/main/res/layout/message_receiver_layout.xml
+++ b/app/src/main/res/layout/message_receiver_layout.xml
@@ -27,8 +27,8 @@
             android:layout_height="45dp"
             tools:src="@drawable/ic_select_image"
             android:id="@+id/circleImageView"
+            android:layout_gravity="bottom"
             app:receiverImage="@{message.userId}"
-            android:layout_gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +77,6 @@
                 android:textSize="8sp"
                 android:visibility="gone"
                 tools:text="Delivered"/>
-
 
         </LinearLayout>
 
